--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,16 @@ jobs:
           root: .
           paths:
             - .
+jobs:
+  horusec:
+    executor: horusec-executor
+    steps:
+      - checkout
+      - run:
+          name: Horusec Security Test
+          command: |
+            curl -fsSL https://horusec.io/bin/install.sh | bash
+            horusec start -p="./" -e="true"  
   test:
     machine:
       image: ubuntu-2004:202010-01
@@ -49,3 +59,7 @@ workflows:
       - deploy:
           requires:
             - test
+workflows:
+  pipeline:
+    jobs:
+      - horusec
