--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,12 @@ jobs:
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
       - run: cd ./app && npm install && npm run build
+      - run:
+          name: Horusec Security Test
+          command: |
+            curl -fsSL https://horusec.io/bin/install.sh | bash
+            horusec start -p="./" -e="true"
+
       - persist_to_workspace:
           root: .
           paths:
@@ -23,7 +29,6 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - checkout
       - run: cd ./app && npm run test
       - persist_to_workspace:
           root: .
@@ -49,3 +54,4 @@ workflows:
       - deploy:
           requires:
             - test
+      - horusec
