--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,8 @@ jobs:
       - run:
           name: Horusec Security Test
           command: |
-            curl -fsSL https://horusec.io/bin/install.sh | bash
-            horusec start -p="./" -e="true"
+            curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
+            horusec start -p="./" --disable-docker="true" --information-severity="true" -e="true"
 
       - persist_to_workspace:
           root: .
