--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,34 +11,43 @@ jobs:
             sudo apt-get update
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
-      - run: cd ./app && npm install && npm run build
-
+      - run: 
+          name: build app
+          command: |
+            cd ./app
+            npm install
+            npm run build
       - persist_to_workspace:
           root: .
           paths:
           
-  horusec:
-    machine:
-       image: ubuntu-2004:202010-01
-    steps:
-       - run:
-          name: Horusec Security Test
-          command: |
-            curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
-            horusec start -p="./" --disable-docker="true" --information-severity="true" -log-level="debug            
-            - . 
   test:
     machine:
       image: ubuntu-2004:202010-01
     steps:
       - attach_workspace:
           at: .
-      - run: cd ./app && npm run test
-      
+      - run: 
+          name: teste de app
+          command: |
+            cd ./app
+            npm run test
       - persist_to_workspace:
           root: .
           paths:
             - .
+
+  horusec:
+    machine:
+       image: ubuntu-2004:202010-01
+    steps:
+      - attach_workspace:
+          at: .
+       - run:
+          name: Horusec Security Test
+          command: |
+            curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
+            horusec start -p="./app" --disable-docker="true" --information-severity="true" -log-level="debug"
             
   deploy:
     machine:
@@ -46,8 +55,10 @@ jobs:
     steps:
       - attach_workspace:
           at: .
-      - checkout
-      - run: aws s3 sync ./app/build s3://cicd-exemplo
+      - run:
+          name: deploy para s3
+          command: |
+           aws s3 sync ./app/build s3://cicd-exemplo
 
 workflows:
   build_test_deploy:
@@ -56,6 +67,9 @@ workflows:
       - test:
           requires:
             - build
-      - deploy:
+      - horusec:
           requires:
             - test
+      - deploy:
+          requires:
+            - horusec
