--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,19 @@ jobs:
           paths:
             - .
 
+  trivy:
+     <<: *defaults
+    steps:
+      - attach_workspace:
+          at: /tmp/persist_to_workspace
+      - run:
+          name: Analise Trivy Docker 
+          command: | 
+            wget https://github.com/aquasecurity/trivy/releases/download/v0.30.2/trivy_0.30.2_Linux-64bit.deb
+            sudo dpkg -i trivy_0.30.2_Linux-64bit.deb
+            docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME/Library/Caches:/root/.cache/ aquasec/trivy:0.18.3 ubuntu-2004:202010-01
+
+
   horusec:
     <<: *defaults
     steps:
@@ -49,9 +62,11 @@ jobs:
       - run:
           name: Horusec Security Test
           command: |
-            export HORUSEC_CLI_RETURN_ERROR_IF_FOUND_VULNERABILITY="true"
+            export HORUSEC_CLI_RETURN_ERROR_IF_FOUND_VULNERABILITY="false"
+            export HORUSEC_CLI_ENABLE_OWASP_DEPENDENCY_CHECK="true"
+            export HORUSEC_CLI_ENABLE_SHELLCHECK="true"
             curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
-            horusec start -p="./app" --information-severity="true" -log-level="debug"
+            horusec start -p="./app" --information-severity="false" -log-level="debug"
                         
   deploy:
     <<: *defaults
@@ -70,9 +85,12 @@ workflows:
       - test:
           requires:
             - build
+      - trivy:
+          requires:
+            - test      
       - horusec:
           requires:
-            - test
+            - trivy
       - deploy:
           requires:
             - horusec
