--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,15 +21,21 @@ jobs:
           command: |
             cd ./app
             npm install
-            npm run build
+            npm run build      
+      - run:
+          name: Build image
+          command: docker build -t trivy-ci-test:${CIRCLE_SHA1} .
       - run:
           name: Install trivy
           command: |
-            apk add --update-cache --upgrade --update curl
-            curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -s -- -b /usr/local/bin
+           sudo apt-get install wget apt-transport-https gnupg lsb-release
+           wget -qO - https://aquasecurity.github.io/trivy-repo/deb/public.key | sudo apt-key add -
+           echo deb https://aquasecurity.github.io/trivy-repo/deb $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+           sudo apt-get update
+           sudo apt-get install trivy
       - run:
           name: Scan the local image
-          command: trivy --exit-code 0 --no-progress trivy-ci-test:${CIRCLE_SHA1}         
+          command: trivy --exit-code 0 --no-progress ubuntu-2004:202010-01:${CIRCLE_SHA1}         
       - persist_to_workspace:
           root: /tmp/persist_to_workspace
           paths:
