--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,8 @@ jobs:
             npm run build      
       - run:
           name: Build image
-          command: docker build -t trivy-ci-test:${CIRCLE_SHA1} .
+          command: | 
+          docker build -t trivy-ci-test:${CIRCLE_SHA1} .
       - run:
           name: Install trivy
           command: |
