--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
            sudo apt-get install trivy
       - run:
           name: Scan the local image
-          command: trivy --exit-code 0 --no-progress ubuntu-2004:202010-01      
+          command: trivy image ubuntu-2004:202010-01
       - persist_to_workspace:
           root: /tmp/persist_to_workspace
           paths:
