--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,9 @@ jobs:
             npm install
             npm run build
       - run:
+          name: Build image trivy
+          command: docker build -t trivy-ci-test:${CIRCLE_SHA1} .
+      - run:
           name: Install trivy
           command: |
            sudo apt-get install wget apt-transport-https gnupg lsb-release
