--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: Install trivy
           command: |
-            docker run aquasec/trivy image ubuntu-2004:202010-01
+            docker run aquasec/trivy image /tmp/persist_to_workspace
       - persist_to_workspace:
           root: /tmp/persist_to_workspace
           paths:
