--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,83 +1,165 @@
 version: 2.1
 
-defaults: &defaults
-  working_directory: /tmp/persist_to_workspace
-  machine:
-      image: ubuntu-2004:202010-01
+orbs: 
+  trivy: signavio/trivy@1.3.0
 
-jobs:
-  build:
-    <<: *defaults
+description: Docker image vulnerability scans with trivy
+
+executors:
+  default:
+    description: "Container to run the steps in"
+    parameters:
+      image:
+        type: string
+        default: ubuntu-2004:202111-02
+    machine:
+      image: <<parameters.image>>
+
+commands:
+  vulnerability-scan:
+    description: "Scan an image for vulnerabilities"
+    parameters:
+      docker-image:
+        description: >
+          Fully qualified Docker image name, i.e. hostname[:port]/reponame[:tag].
+        type: string
+      severity:
+        description: >
+          Comma separated list of severities of vulnerabilities to be displayed,
+          one of UNKNOWN, LOW, MEDIUM, HIGH, CRITICAL.
+        type: string
+        default: "HIGH,CRITICAL"
+      vuln-type:
+        description: Comma-separated list of vulnerability types.
+        type: string
+        default: "os,library"
+      format:
+        description: Report format
+        type: enum
+        enum: [ "table", "json", "template" ]
+        default: "table"
+      template:
+        description: >
+          Path to the template to use to generate a report. This option is only
+          effective if format=template.
+        type: string
+        default: ''
+      output-file-path:
+        description: Output file path.
+        type: string
+        default: ''
+      ignore-unfixed:
+        description: Include only vulnerabilities that have a known fix.
+        type: boolean
+        default: true
+      no-progress:
+        description: Suppress progress bar.
+        type: boolean
+        default: true
+      exit-code:
+        description: Exit code when vulnerabilities were found.
+        type: integer
+        default: 1
+      trivy-version:
+        description: Trivy version to be used for scanning.
+        type: string
+        default: latest
+      skip-dir:
+        description: Directory where the traversal is skipped. Only support single directory.
+        type: string
+        default: ''
+      skip-file:
+        description: File path to skip traversal. Only support single file.
+        type: string
+        default: ''
     steps:
-      - checkout
-      - run:
-          name: Installing AWS CLI
-          command: |
-            sudo apt-get update
-            sudo apt install python3-pip
-            sudo pip3 install awsebcli --upgrade
-      - run: 
-          name: build app
-          command: |
-            cd ./app
-            npm install
-            npm run build
       - run:
           name: Install trivy
           command: |
-            docker run aquasec/trivy image /tmp/persist_to_workspace
-      - persist_to_workspace:
-          root: /tmp/persist_to_workspace
-          paths:
-            - .         
-  test:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: /tmp/persist_to_workspace
-      - run: 
-          name: teste de app
-          command: |
-            cd ./app
-            npm run test
-      - persist_to_workspace:
-          root: /tmp/persist_to_workspace
-          paths:
-            - .
-
-  horusec:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: /tmp/persist_to_workspace
+            TVER='<<parameters.trivy-version>>'
+            if [[ 'latest' == "$TVER" ]]; then
+              TVER=$(curl --silent "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | jq -r .tag_name | tail -c +2)
+            fi
+            wget -c https://github.com/aquasecurity/trivy/releases/download/v$TVER/trivy_${TVER}_Linux-64bit.tar.gz
+            tar -xzf trivy_${TVER}_Linux-64bit.tar.gz
+            chmod a+x trivy
+            wget -q https://raw.githubusercontent.com/aquasecurity/trivy/v$TVER/contrib/junit.tpl
       - run:
-          name: Horusec Security Test
+          name: Docker Image Vulnerability Scan
           command: |
-            export HORUSEC_CLI_RETURN_ERROR_IF_FOUND_VULNERABILITY="false"
-            export HORUSEC_CLI_ENABLE_OWASP_DEPENDENCY_CHECK="true"
-            curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
-            horusec start -p="./app" --information-severity="false" -log-level="debug"
-                        
-  deploy:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: /tmp/persist_to_workspace
-      - run:
-          name: deploy para s3
-          command: |
-           aws s3 sync ./app/build s3://cicd-exemplo
+            [[ ! -z '<<parameters.output-file-path>>' ]] && mkdir -p "$(dirname '<<parameters.output-file-path>>')"
+            ./trivy image \
+              --format='<<parameters.format>>' \
+              --template='<<parameters.template>>' \
+              --output='<<parameters.output-file-path>>' \
+              --exit-code='<<parameters.exit-code>>' \
+              --severity='<<parameters.severity>>' \
+              --no-progress='<<parameters.no-progress>>' \
+              --ignore-unfixed='<<parameters.ignore-unfixed>>' \
+              --skip-dirs='<<parameters.skip-dir>>' \
+              --skip-files='<<parameters.skip-file>>' \
+              "<<parameters.docker-image>>"
 
-workflows:
-  build_test_deploy:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build    
-      - horusec:
-          requires:
-            - test
-      - deploy:
-          requires:
-            - horusec
+  vulnerability-scan-report:
+    description: "Generate a JUnit report and store in CircleCI"
+    parameters:
+      docker-image:
+        description: >
+          Fully qualified Docker image name, i.e. hostname[:port]/reponame[:tag].
+        type: string
+      severity:
+        description: >
+          Comma separated list of severities of vulnerabilities to be displayed,
+          one of UNKNOWN, LOW, MEDIUM, HIGH, CRITICAL.
+        type: string
+        default: "HIGH,CRITICAL"
+      vuln-type:
+        description: Comma-separated list of vulnerability types.
+        type: string
+        default: "os,library"
+      output-folder-path:
+        description: Output folder path.
+        type: string
+        default: 'trivy-scan-results'
+      ignore-unfixed:
+        description: Include only vulnerabilities that have a fix
+        type: boolean
+        default: true
+      no-progress:
+        description: Suppress progress bar
+        type: boolean
+        default: true
+      exit-code:
+        description: Exit code when vulnerabilities were found.
+        type: integer
+        default: 1
+      trivy-version:
+        description: Trivy version to be used for scanning.
+        type: string
+        default: latest
+      skip-dir:
+        description: Directory where the traversal is skipped. Only support single directory.
+        type: string
+        default: ''
+      skip-file:
+        description: File path to skip traversal. Only support single file.
+        type: string
+        default: ''
+    steps:
+      - vulnerability-scan:
+          docker-image: <<parameters.docker-image>>
+          severity: <<parameters.severity>>
+          exit-code: <<parameters.exit-code>>
+          vuln-type: <<parameters.vuln-type>>
+          ignore-unfixed: <<parameters.ignore-unfixed>>
+          no-progress: <<parameters.no-progress>>
+          format: template
+          template: '@junit.tpl'
+          output-file-path: <<parameters.output-folder-path>>/junit.xml
+          trivy-version: <<parameters.trivy-version>>
+          skip-dir: <<parameters.skip-dir>>
+          skip-file: <<parameters.skip-file>>
+      - store_test_results:
+          path: <<parameters.output-folder-path>>
+      - store_artifacts:
+          path: <<parameters.output-folder-path>>
