--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run:
           name: trivy
           command: |
-            docker run signavio/trivy@1.3.0 image <<parameters.image>>
+            docker run aquasec/trivy image image <<parameters.image>>
       - persist_to_workspace:
           root: /tmp/persist_to_workspace
           paths:
