--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
       - run:
           name: trivy
           command: |
-            docker run aquasec/trivy image <<parameters.image>>
+            docker image list
       - persist_to_workspace:
           root: /tmp/persist_to_workspace
           paths:
