--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,7 +65,14 @@ jobs:
             export HORUSEC_CLI_ENABLE_OWASP_DEPENDENCY_CHECK="true"
             curl -fsSL https://raw.githubusercontent.com/ZupIT/horusec/main/deployments/scripts/install.sh | bash -s latest
             horusec start -p="./app" --information-severity="false" -log-level="debug"
-                        
+
+  snyk:
+    <<: *defaults
+    steps:   
+      - attach_workspace:
+          at: /tmp/persist_to_workspace
+      - run: - snyk/scan
+            
   deploy:
     <<: *defaults
     steps:
@@ -86,6 +93,9 @@ workflows:
       - horusec:
           requires:
             - test
+      - synk: 
+          requires:
+            - horusec      
       - deploy:
           requires:
-            - horusec
+            - synk
