--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,7 +96,7 @@ workflows:
       - horusec:
           requires:
             - test
-      - synk: 
+      - snyk: 
           requires:
             - horusec      
       - deploy:
