--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,12 +73,8 @@ jobs:
           at: /tmp/persist_to_workspace
       - run: 
           name: Analise Snyk
-      - snyk/scan:
-        token-variable: CICD_SNYK_TOKEN  
-        fail-on-issues: false  
-        monitor-on-build: true   
-        project: ${CIRCLE_PROJECT_REPONAME}/${CIRCLE_BRANCH}-app
-        organization: ${SNYK_CICD_ORGANIZATION}
+          command: |
+           snyk/scan ./app
             
   deploy:
     <<: *defaults
