--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,8 @@ jobs:
             docker image list
       
       - snyk/scan:
-          token-variable: SNYK_TOKEN
+          token-variable: SNYK_API
+          fail-on-issues: false 
 
       - persist_to_workspace:
           root: /tmp/persist_to_workspace
