--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
             docker image list
       
       - snyk/scan:
+          token-variable: SNYK_TOKEN
           fail-on-issues: false 
 
       - persist_to_workspace:
