--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,7 @@ jobs:
             ls
 
       - snyk/scan:
+          command: cd ./app
           fail-on-issues: false
           monitor-on-build: true
           target-file: Dockerfile      
